--- a/html/contact.html
+++ b/html/contact.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://code.jquery.com/jquery-3.6.0.js"
-            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-        <link rel="stylesheet" href="/assets/css/contact.css">
-        <script type="text/javascript" src="/assets/js/script.js"></script>
-        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-        <!-- or -->
-        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-        <title>Portfolio Killian B</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+    <link rel="stylesheet" href="/assets/css/contact.css">
+    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+    <!-- or -->
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <title>Portfolio Killian B</title>
+</head>
 
 <body>
     <header>
         <div class="navbar">
             <div class="box-navbar">
                 <a href="/html/index.html">
-                    <svg class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                    <svg class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                         <g transform="matrix(1,0,0,1,-197.673,-864.717)">
                             <g transform="matrix(0.0766712,0,0,0.0766712,182.517,848.138)">
                                 <g>
                                     <g transform="matrix(1,0,0,1,-23.9882,5.68434e-14)">
-                                        <path d="M572.825,216.238C766.637,216.238 923.988,373.589 923.988,567.402C923.988,761.214 766.637,918.565 572.825,918.565C379.012,918.565 221.661,761.214 221.661,567.402C221.661,373.589 379.012,216.238 572.825,216.238ZM572.825,365.66C684.169,365.66 774.567,456.057 774.567,567.402C774.567,678.746 684.169,769.144 572.825,769.144C461.48,769.144 371.083,678.746 371.083,567.402C371.083,456.057 461.48,365.66 572.825,365.66Z"/>
+                                        <path
+                                            d="M572.825,216.238C766.637,216.238 923.988,373.589 923.988,567.402C923.988,761.214 766.637,918.565 572.825,918.565C379.012,918.565 221.661,761.214 221.661,567.402C221.661,373.589 379.012,216.238 572.825,216.238ZM572.825,365.66C684.169,365.66 774.567,456.057 774.567,567.402C774.567,678.746 684.169,769.144 572.825,769.144C461.48,769.144 371.083,678.746 371.083,567.402C371.083,456.057 461.48,365.66 572.825,365.66Z" />
                                     </g>
                                     <g transform="matrix(1,0,0,4,-33.7415,-2755.7)">
-                                        <path d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z"/>
+                                        <path
+                                            d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z" />
                                     </g>
                                     <g transform="matrix(1,0,0,4,291.909,-2755.7)">
-                                        <path d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z"/>
+                                        <path
+                                            d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z" />
                                     </g>
                                 </g>
                             </g>
@@ -50,11 +56,15 @@
 
     <div class="main-background">
         <h1 class="main-text">Contact</span></h1>
-        <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 997" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+        <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 997" version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
+            xmlns:serif="http://www.serif.com/"
+            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
             <g transform="matrix(1,0,0,1,-64132,-132134)">
                 <g transform="matrix(12.2296,0,0,3.98288,64132,124335)">
                     <g transform="matrix(0.081769,0,0,0.251075,-5244.01,-31217.5)">
-                        <path d="M64132,133130L64132,132134L71726.5,132847L79321.1,132134L79321.1,133130L64132,133130Z" style="fill:rgb(247,247,251);"/>
+                        <path d="M64132,133130L64132,132134L71726.5,132847L79321.1,132134L79321.1,133130L64132,133130Z"
+                            style="fill:rgb(247,247,251);" />
                     </g>
                 </g>
             </g>
@@ -63,7 +73,9 @@
     <div class="flexbox">
         <div class="box">
             <h2 class="title-legal">Email</h2>
-            <li class="email"><a class="myemail ltrText" href="mailto:&#098;&#107;&#046;&#107;&#105;&#108;&#108;&#105;&#097;&#110;&#098;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">moc.liamg@bnaillik.kb</a></li>
+            <li class="email"><a class="myemail ltrText"
+                    href="mailto:&#098;&#107;&#046;&#107;&#105;&#108;&#108;&#105;&#097;&#110;&#098;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">moc.liamg@bnaillik.kb</a>
+            </li>
             </a>
         </div>
     </div>
