--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -22,18 +22,24 @@
         <div class="navbar">
             <div class="box-navbar">
                 <a href="/html/index.html">
-                    <svg class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                    <svg class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                         <g transform="matrix(1,0,0,1,-197.673,-864.717)">
                             <g transform="matrix(0.0766712,0,0,0.0766712,182.517,848.138)">
                                 <g>
                                     <g transform="matrix(1,0,0,1,-23.9882,5.68434e-14)">
-                                        <path d="M572.825,216.238C766.637,216.238 923.988,373.589 923.988,567.402C923.988,761.214 766.637,918.565 572.825,918.565C379.012,918.565 221.661,761.214 221.661,567.402C221.661,373.589 379.012,216.238 572.825,216.238ZM572.825,365.66C684.169,365.66 774.567,456.057 774.567,567.402C774.567,678.746 684.169,769.144 572.825,769.144C461.48,769.144 371.083,678.746 371.083,567.402C371.083,456.057 461.48,365.66 572.825,365.66Z"/>
+                                        <path
+                                            d="M572.825,216.238C766.637,216.238 923.988,373.589 923.988,567.402C923.988,761.214 766.637,918.565 572.825,918.565C379.012,918.565 221.661,761.214 221.661,567.402C221.661,373.589 379.012,216.238 572.825,216.238ZM572.825,365.66C684.169,365.66 774.567,456.057 774.567,567.402C774.567,678.746 684.169,769.144 572.825,769.144C461.48,769.144 371.083,678.746 371.083,567.402C371.083,456.057 461.48,365.66 572.825,365.66Z" />
                                     </g>
                                     <g transform="matrix(1,0,0,4,-33.7415,-2755.7)">
-                                        <path d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z"/>
+                                        <path
+                                            d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z" />
                                     </g>
                                     <g transform="matrix(1,0,0,4,291.909,-2755.7)">
-                                        <path d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z"/>
+                                        <path
+                                            d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z" />
                                     </g>
                                 </g>
                             </g>
@@ -51,102 +57,126 @@
 
     <div class="main-background">
         <h1 class="main-text">Exercices & Projets</span></h1>
-        <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 997" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+        <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 997" version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
+            xmlns:serif="http://www.serif.com/"
+            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
             <g transform="matrix(1,0,0,1,-64132,-132134)">
                 <g transform="matrix(12.2296,0,0,3.98288,64132,124335)">
                     <g transform="matrix(0.081769,0,0,0.251075,-5244.01,-31217.5)">
-                        <path d="M64132,133130L64132,132134L71726.5,132847L79321.1,132134L79321.1,133130L64132,133130Z" style="fill:rgb(247,247,251);"/>
+                        <path d="M64132,133130L64132,132134L71726.5,132847L79321.1,132134L79321.1,133130L64132,133130Z"
+                            style="fill:rgb(247,247,251);" />
                     </g>
                 </g>
             </g>
         </svg>
     </div>
 
-<div>
+    <div>
 
 
 
 
 
-    <!-- create a navbar responsive -->
+        <!-- create a navbar responsive -->
 
 
-    <div class="container">
-        <div class="gallery_filter_tab">
-            <ul class="list-inline">
+        <div class="container">
+            <div class="gallery_filter_tab">
+                <ul class="list-inline">
                     <a href="javascript:void(0);" class="filter-button active" data-filter="all">Tout
-                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                             <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                                <path d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z" style="fill:#fff;"/>
+                                <path
+                                    d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
+                                    style="fill:#fff;" />
                             </g>
                         </svg>
                     </a>
 
                     <a href="javascript:void(0);" class="filter-button" data-filter="HTML">HTML / CSS
-                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                             <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                                <path d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z" style="fill:#fff;"/>
+                                <path
+                                    d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
+                                    style="fill:#fff;" />
                             </g>
                         </svg>
                     </a>
-         
+
                     <a href="javascript:void(0);" class="filter-button" data-filter="JS">Javascript
-                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                             <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                                <path d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z" style="fill:#fff;"/>
+                                <path
+                                    d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
+                                    style="fill:#fff;" />
                             </g>
                         </svg>
                     </a>
 
                     <a href="javascript:void(0);" class="filter-button" data-filter="Design">Design
-                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                        <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                             <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                                <path d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z" style="fill:#fff;"/>
+                                <path
+                                    d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
+                                    style="fill:#fff;" />
                             </g>
                         </svg>
                     </a>
-            </ul>
-        </div>
-    </div>
-
-    <div class="box-flexbox">
-        <div class="row">
-            <div class="filter HTML">
-                <!-- <img src="http://fakeimg.pl/365x365/" class="img-fluid">   -->
-                HTML
-                <li><a href="/html/exo/projet-1-html.html" class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter Design">
-                DESIGN
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter HTML">
-                HTML
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter HTML">
-                HTML
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter JS">
-                JS
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter JS">
-                JS
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-            <div class="filter Design">
-                DESIGN
-                <li><a class="button-access-project">Accéder au projet</a></li>
+                </ul>
             </div>
         </div>
-    </div>
+
+        <div class="box-flexbox">
+            <div class="row">
+                <div class="filter HTML">
+                    <!-- <img src="http://fakeimg.pl/365x365/" class="img-fluid">   -->
+                    HTML
+                    <li><a href="/html/exo/projet-1-html.html" class="button-access-project">Accéder au projet</a></li>
+                </div>
+
+                <div class="filter Design">
+                    DESIGN
+                    <li><a class="button-access-project">Accéder au projet</a></li>
+                </div>
+
+                <div class="filter HTML">
+                    HTML
+                    <li><a class="button-access-project">Accéder au projet</a></li>
+                </div>
+
+                <div class="filter HTML">
+                    HTML
+                    <li><a class="button-access-project">Accéder au projet</a></li>
+                </div>
+
+                <div class="filter JS">
+                    JS
+                    <li><a class="button-access-project">Accéder au projet</a></li>
+                </div>
+
+                <div class="filter JS">
+                    JS
+                    <li><a class="button-access-project">Accéder au projet</a></li>
+                </div>
+                <div class="filter Design">
+                    DESIGN
+                    <li><a class="button-access-project">Accéder au projet</a></li>
+                </div>
+            </div>
+        </div>
 
 </body>
 
