--- a/landing.html
+++ b/landing.html
@@ -21,24 +21,15 @@
         <div class="navbar">
             <div class="box-navbar">
                 <a href="/html/index.html">
-                    <svg class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
-                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-                        <g transform="matrix(1,0,0,1,-197.673,-864.717)">
-                            <g transform="matrix(0.0766712,0,0,0.0766712,182.517,848.138)">
-                                <g>
-                                    <g transform="matrix(1,0,0,1,-23.9882,5.68434e-14)">
-                                        <path
-                                            d="M572.825,216.238C766.637,216.238 923.988,373.589 923.988,567.402C923.988,761.214 766.637,918.565 572.825,918.565C379.012,918.565 221.661,761.214 221.661,567.402C221.661,373.589 379.012,216.238 572.825,216.238ZM572.825,365.66C684.169,365.66 774.567,456.057 774.567,567.402C774.567,678.746 684.169,769.144 572.825,769.144C461.48,769.144 371.083,678.746 371.083,567.402C371.083,456.057 461.48,365.66 572.825,365.66Z" />
+                    <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                        <g transform="matrix(1,0,0,1,-42879.7,-225755)">
+                            <g transform="matrix(5.55556,0,0,3.125,41096.1,224203)">
+                                <g transform="matrix(1.1768,0,0,1.1768,-109.793,-195.187)">
+                                    <g transform="matrix(1.72139,0,0,3.06025,-129718,-677765)">
+                                        <path d="M75583.3,221835C75583.3,221835 75752,222003 75752,222003L75772,221983L75623.3,221835L75772,221686L75752,221666L75583.3,221835Z"/>
                                     </g>
-                                    <g transform="matrix(1,0,0,4,-33.7415,-2755.7)">
-                                        <path
-                                            d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z" />
-                                    </g>
-                                    <g transform="matrix(1,0,0,4,291.909,-2755.7)">
-                                        <path
-                                            d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z" />
+                                    <g transform="matrix(1.72139,0,0,3.06025,-129718,-677765)">
+                                        <path d="M75712.1,221821C75708.4,221821 75704.9,221823 75702.3,221825C75699.7,221828 75698.2,221831 75698.2,221835L75698.2,221835C75698.2,221839 75699.7,221843 75702.3,221845C75704.9,221848 75708.4,221849 75712.1,221849L75774.1,221849C75808.9,221849 75837,221878 75837,221912C75837,221947 75808.9,221975 75774.1,221975L75597.4,221975L75597.4,221849L75616.5,221849L75616.5,221821L75597.4,221821L75597.4,221694L75774.1,221694C75808.9,221694 75837,221723 75837,221757C75837,221764 75836,221770 75834,221777C75831.9,221783 75834.7,221790 75840.7,221793C75840.7,221793 75840.7,221793 75840.7,221793C75844.4,221795 75848.8,221795 75852.7,221794C75856.7,221792 75859.7,221789 75861,221785C75863.8,221776 75865.3,221767 75865.3,221757C75865.3,221707 75824.5,221666 75774.1,221666C75774.1,221666 75653.6,221666 75597.4,221666L75597.4,221666L75597.4,221666C75581.8,221666 75569.2,221679 75569.2,221694L75569.2,221975C75569.2,221991 75581.8,222003 75597.4,222003L75774.1,222003C75824.5,222003 75865.3,221963 75865.3,221912C75865.3,221862 75824.5,221821 75774.1,221821L75712.1,221821Z" />
                                     </g>
                                 </g>
                             </g>
@@ -61,6 +52,12 @@
         <a href="/html/index.html" class="button-link-landing">Accéder au site</a>
     </div>
 
+
+    <footer>
+        <div class="box-footer">
+
+        </div>
+    </footer>
 
 </body>
 
