--- a/html/contact.html
+++ b/html/contact.html
@@ -71,12 +71,12 @@
         </div>
     </div>
 
+
     <footer>
         <div class="box-footer">
-
+<h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
         </div>
     </footer>
-
 </body>
 
 </html>
