--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -135,44 +135,52 @@
                 <div class="filter HTML">
                     <!-- <img src="http://fakeimg.pl/365x365/" class="img-fluid">   -->
                     HTML
+                    <h3 class="title-project-box">Découverte de figma</h3>
+                    <li><a class="button-access-project">Accéder au projet</a></li>
+                </div>
+
+                <div class="filter Design">
+                    DESIGN
+                    <h3 class="title-project-box">Découverte de figma</h3>
                     <li><a href="/html/exo/projet-1-html.html" class="button-access-project">Accéder au projet</a></li>
                 </div>
 
-                <div class="filter Design">
-                    DESIGN
+                <div class="filter HTML">
+                    HTML
+                    <h3 class="title-project-box">Découverte de figma</h3>
                     <li><a class="button-access-project">Accéder au projet</a></li>
                 </div>
 
                 <div class="filter HTML">
                     HTML
-                    <li><a class="button-access-project">Accéder au projet</a></li>
-                </div>
-
-                <div class="filter HTML">
-                    HTML
+                    <h3 class="title-project-box">Découverte de figma</h3>
                     <li><a class="button-access-project">Accéder au projet</a></li>
                 </div>
 
                 <div class="filter JS">
                     JS
+                    <h3 class="title-project-box">Découverte de figma</h3>
                     <li><a class="button-access-project">Accéder au projet</a></li>
                 </div>
 
                 <div class="filter JS">
                     JS
+                    <h3 class="title-project-box">Découverte de figma</h3>
                     <li><a class="button-access-project">Accéder au projet</a></li>
                 </div>
                 <div class="filter Design">
                     DESIGN
+                    <h3 class="title-project-box">Découverte de figma</h3>
                     <li><a class="button-access-project">Accéder au projet</a></li>
                 </div>
             </div>
         </div>
 
 
+
         <footer>
             <div class="box-footer">
-    
+    <h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
             </div>
         </footer>
 
