--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <div class="main-background">
-        <h1 class="main-text">Portfolio /<span class="main-text-weight">/ Killian B</span></h1>
+        <h1 class="main-text">Voici mon Portfolio où se trouve<br>tous mes projets et exercices.</h1>
         <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 997" version="1.1"
             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
             xmlns:serif="http://www.serif.com/"
@@ -63,9 +63,6 @@
     </div>
     <div class="flexbox">
         <div class="box">
-            <div class="number-title">1.</div>
-            <img class="img-box"
-                src="/assets/img/kisspng-recruitment-job-human-resource-flat-design-interviewgo-5d44fff1d99f85.2210022015648030578914.png">
             <h2 class="sous-title-box">Mes Projets & Exercices</h2>
             <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
         </div>
@@ -73,9 +70,10 @@
 
 
 
+
     <footer>
         <div class="box-footer">
-
+<h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
         </div>
     </footer>
 
