--- a/landing.html
+++ b/landing.html
@@ -53,9 +53,10 @@
     </div>
 
 
+
     <footer>
         <div class="box-footer">
-
+<h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
         </div>
     </footer>
 
