--- a/html/exo/projet-1-html.html
+++ b/html/exo/projet-1-html.html
@@ -49,7 +49,7 @@
 
 
     <div class="main-background">
-        <h1 class="main-text">Refonte d'un design<br>Découverte de Figma</span></h1>
+        <h1 class="main-text">Découverte de Figma</span></h1>
         <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 997" version="1.1"
             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
             xmlns:serif="http://www.serif.com/"
@@ -67,7 +67,7 @@
 
     <footer>
         <div class="box-footer">
-
+<h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
         </div>
     </footer>
 
