--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -66,15 +66,11 @@
 
     <div class="main-background">
         <h1 class="main-text">Exercices & Projets</span></h1>
-        <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 997" version="1.1"
-            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
-            xmlns:serif="http://www.serif.com/"
-            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-            <g transform="matrix(1,0,0,1,-64132,-132134)">
-                <g transform="matrix(12.2296,0,0,3.98288,64132,124335)">
-                    <g transform="matrix(0.081769,0,0,0.251075,-5244.01,-31217.5)">
-                        <path d="M64132,133130L64132,132134L71726.5,132847L79321.1,132134L79321.1,133130L64132,133130Z"
-                            style="fill:rgb(247,247,251);" />
+        <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 1214" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+            <g transform="matrix(1,0,0,1,-47942.3,-142238)">
+                <g transform="matrix(12.2296,0,0,3.98288,47942.3,134657)">
+                    <g transform="matrix(0.0858002,0,0,0.12564,-4136.56,-15815.2)">
+                        <path d="M62687.1,141026C57721.1,143408 52895.3,143418 48211.6,141026L48211.6,143452L62687.1,143452L62687.1,141026Z" style="fill:rgb(247,247,251);"/>
                     </g>
                 </g>
             </g>
