--- a/html/exo/projet-1-html.html
+++ b/html/exo/projet-1-html.html
@@ -81,7 +81,7 @@
 
     <footer>
         <div class="box-footer">
-<h3 class="title-copyright">© 2022 Killia Blanchard - Tous droits réservés</h3>
+<h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
         </div>
     </footer>
 
