--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
     <script type="text/javascript" src="/assets/js/script.js"></script>
-    
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
@@ -27,7 +27,11 @@
     <link rel="manifest" href="/assets/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <title>Portfolio Killian B</title>
@@ -38,15 +42,20 @@
         <div class="navbar">
             <div class="box-navbar">
                 <a href="/html/index.html">
-                    <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                    <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                         <g transform="matrix(1,0,0,1,-42879.7,-225755)">
                             <g transform="matrix(5.55556,0,0,3.125,41096.1,224203)">
                                 <g transform="matrix(1.1768,0,0,1.1768,-109.793,-195.187)">
                                     <g transform="matrix(1.72139,0,0,3.06025,-129718,-677765)">
-                                        <path d="M75583.3,221835C75583.3,221835 75752,222003 75752,222003L75772,221983L75623.3,221835L75772,221686L75752,221666L75583.3,221835Z"/>
+                                        <path
+                                            d="M75583.3,221835C75583.3,221835 75752,222003 75752,222003L75772,221983L75623.3,221835L75772,221686L75752,221666L75583.3,221835Z" />
                                     </g>
                                     <g transform="matrix(1.72139,0,0,3.06025,-129718,-677765)">
-                                        <path d="M75712.1,221821C75708.4,221821 75704.9,221823 75702.3,221825C75699.7,221828 75698.2,221831 75698.2,221835L75698.2,221835C75698.2,221839 75699.7,221843 75702.3,221845C75704.9,221848 75708.4,221849 75712.1,221849L75774.1,221849C75808.9,221849 75837,221878 75837,221912C75837,221947 75808.9,221975 75774.1,221975L75597.4,221975L75597.4,221849L75616.5,221849L75616.5,221821L75597.4,221821L75597.4,221694L75774.1,221694C75808.9,221694 75837,221723 75837,221757C75837,221764 75836,221770 75834,221777C75831.9,221783 75834.7,221790 75840.7,221793C75840.7,221793 75840.7,221793 75840.7,221793C75844.4,221795 75848.8,221795 75852.7,221794C75856.7,221792 75859.7,221789 75861,221785C75863.8,221776 75865.3,221767 75865.3,221757C75865.3,221707 75824.5,221666 75774.1,221666C75774.1,221666 75653.6,221666 75597.4,221666L75597.4,221666L75597.4,221666C75581.8,221666 75569.2,221679 75569.2,221694L75569.2,221975C75569.2,221991 75581.8,222003 75597.4,222003L75774.1,222003C75824.5,222003 75865.3,221963 75865.3,221912C75865.3,221862 75824.5,221821 75774.1,221821L75712.1,221821Z" />
+                                        <path
+                                            d="M75712.1,221821C75708.4,221821 75704.9,221823 75702.3,221825C75699.7,221828 75698.2,221831 75698.2,221835L75698.2,221835C75698.2,221839 75699.7,221843 75702.3,221845C75704.9,221848 75708.4,221849 75712.1,221849L75774.1,221849C75808.9,221849 75837,221878 75837,221912C75837,221947 75808.9,221975 75774.1,221975L75597.4,221975L75597.4,221849L75616.5,221849L75616.5,221821L75597.4,221821L75597.4,221694L75774.1,221694C75808.9,221694 75837,221723 75837,221757C75837,221764 75836,221770 75834,221777C75831.9,221783 75834.7,221790 75840.7,221793C75840.7,221793 75840.7,221793 75840.7,221793C75844.4,221795 75848.8,221795 75852.7,221794C75856.7,221792 75859.7,221789 75861,221785C75863.8,221776 75865.3,221767 75865.3,221757C75865.3,221707 75824.5,221666 75774.1,221666C75774.1,221666 75653.6,221666 75597.4,221666L75597.4,221666L75597.4,221666C75581.8,221666 75569.2,221679 75569.2,221694L75569.2,221975C75569.2,221991 75581.8,222003 75597.4,222003L75774.1,222003C75824.5,222003 75865.3,221963 75865.3,221912C75865.3,221862 75824.5,221821 75774.1,221821L75712.1,221821Z" />
                                     </g>
                                 </g>
                             </g>
@@ -56,37 +65,32 @@
                 <ul class="link-navbar">
                     <li><a class="link-title" href="/html/index.html">Accueil</a></li>
                     <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
-                    <li><a class="link-title" href="/html/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="main-background">
-        <h1 class="main-text">Voici mon Portfolio où se trouve<br>tous mes projets et exercices.</h1>
-        <svg class="img-separator" width="100%" height="100%" viewBox="0 0 15190 1214" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-            <g transform="matrix(1,0,0,1,-47942.3,-142238)">
-                <g transform="matrix(12.2296,0,0,3.98288,47942.3,134657)">
-                    <g transform="matrix(0.0858002,0,0,0.12564,-4136.56,-15815.2)">
-                        <path d="M62687.1,141026C57721.1,143408 52895.3,143418 48211.6,141026L48211.6,143452L62687.1,143452L62687.1,141026Z" style="fill:rgb(247,247,251);"/>
-                    </g>
-                </g>
-            </g>
-        </svg>
-    </div>
-    <div class="flexbox">
-        <div class="box">
-            <h2 class="sous-title-box">Mes Projets & Exercices</h2>
-            <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
+    <div class="background-color">
+
+        <div class="main-background">
+            <div class="box-max1100px">
+                <h1 class="main-text">Voici mon Portfolio où se trouve<br>tous mes projets de formation.</h1>
+                <a class="button-extern" href="https://killianbld.com">Lien de mon portfolio principale</a>
+            </div>
         </div>
+        <div class="flexbox">
+            <div class="box">
+                <h2 class="sous-title-box">Mes Projets & Exercices</h2>
+                <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
+            </div>
+        </div>
+
     </div>
-
-
 
 
     <footer>
         <div class="box-footer">
-<h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
+            <h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
         </div>
     </footer>
 
